maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:14: error: value += is not a member of Int
					virage+=
                                              ^Escaper:18: error: value += is not a member of Int
					virage+=
                                              ^Escaper:22: error: value += is not a member of Int
					virage+=
                                              ^Escaper:24: error: value += is not a member of Int
					virage+=
                                              ^Escaper:27: error: value += is not a member of Int
					virage+=
                                              ^